





import java.util.List;
import java.util.ArrayList;

public class genericsql_DataBase extends NamedElement {




    public genericsql_DataBase(
    ) {
        super(
        );
    }




}