





import java.util.List;
import java.util.ArrayList;

public class genericsql_ForeignKey extends NamedElement {






    private genericsql_Table genericsql_table;




    private genericsql_Table genericsql_table;




    private genericsql_PrimaryKey genericsql_primarykey;


    public genericsql_ForeignKey(
    ) {
        super(
        );
    }



    public genericsql_Table getGenericsql_table() {
        return genericsql_table;
    }

    public void setGenericsql_table(genericsql_Table genericsql_table) {
        this.genericsql_table = genericsql_table;
    }
    public genericsql_Table getGenericsql_table() {
        return genericsql_table;
    }

    public void setGenericsql_table(genericsql_Table genericsql_table) {
        this.genericsql_table = genericsql_table;
    }
    public genericsql_PrimaryKey getGenericsql_primarykey() {
        return genericsql_primarykey;
    }

    public void setGenericsql_primarykey(genericsql_PrimaryKey genericsql_primarykey) {
        this.genericsql_primarykey = genericsql_primarykey;
    }

}