





import java.util.List;
import java.util.ArrayList;

public class genericsql_PrimaryKey extends NamedElement {




    public genericsql_PrimaryKey(
    ) {
        super(
        );
    }




}