





import java.util.List;
import java.util.ArrayList;

public class genericsql_Table extends NamedElement {






    private genericsql_PrimaryKey genericsql_primarykey;




    private genericsql_DataBase genericsql_database;




    private genericsql_PrimaryKey genericsql_primarykey;




    private genericsql_DataBase genericsql_database;


    public genericsql_Table(
    ) {
        super(
        );
    }



    public genericsql_PrimaryKey getGenericsql_primarykey() {
        return genericsql_primarykey;
    }

    public void setGenericsql_primarykey(genericsql_PrimaryKey genericsql_primarykey) {
        this.genericsql_primarykey = genericsql_primarykey;
    }
    public genericsql_DataBase getGenericsql_database() {
        return genericsql_database;
    }

    public void setGenericsql_database(genericsql_DataBase genericsql_database) {
        this.genericsql_database = genericsql_database;
    }
    public genericsql_PrimaryKey getGenericsql_primarykey() {
        return genericsql_primarykey;
    }

    public void setGenericsql_primarykey(genericsql_PrimaryKey genericsql_primarykey) {
        this.genericsql_primarykey = genericsql_primarykey;
    }
    public genericsql_DataBase getGenericsql_database() {
        return genericsql_database;
    }

    public void setGenericsql_database(genericsql_DataBase genericsql_database) {
        this.genericsql_database = genericsql_database;
    }

}