





import java.util.List;
import java.util.ArrayList;

public class genericsql_Unique extends Constraint {




    public genericsql_Unique(
    ) {
        super(
        );
    }




}