





import java.util.List;
import java.util.ArrayList;

public class Type  {






    private imperativeocl_TryExp imperativeocl_tryexp;


    public Type(
    ) {
    }



    public imperativeocl_TryExp getImperativeocl_tryexp() {
        return imperativeocl_tryexp;
    }

    public void setImperativeocl_tryexp(imperativeocl_TryExp imperativeocl_tryexp) {
        this.imperativeocl_tryexp = imperativeocl_tryexp;
    }

}